# Cosmic

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/: CODEOWNERS
.github/workflows/: cmake-single-platform.yml
CosmicBusiness/: CMakeLists.txt
CosmicBusiness/src/: Cosmic.hpp
CosmicBusiness/src/core/: Game.cpp  Game.hpp  Log.cpp  Log.hpp
CosmicCore/: CMakeLists.txt
CosmicCore/src/: main.cpp
CosmicTests/: CMakeLists.txt
CosmicTests/test/: test_logic.cpp
Docs/: Doxyfile
Docs/html/: _application_8hpp.html  _application_8hpp.js  _application_8hpp__incl.map  _application_8hpp__incl.md5  _application_8hpp_source.html  _game_config_8hpp.html  _game_config_8hpp.js  _game_config_8hpp__dep__incl.map  _game_config_8hpp__dep__incl.md5  _game_config_8hpp_source.html  _game_screen_8hpp.html  _game_screen_8hpp.js  _game_screen_8hpp__incl.map  _game_screen_8hpp__incl.md5  _game_screen_8hpp_source.html  _game_types_8hpp.html  _game_types_8hpp.js  _game_types_8hpp__dep__incl.map  _game_types_8hpp__dep__incl.md5  _game_types_8hpp__incl.map  _game_types_8hpp__incl.md5  _game_types_8hpp_source.html  _ghost_mode_controller_8hpp.html  _ghost_mode_controller_8hpp.js  _ghost_mode_controller_8hpp__incl.map  _ghost_mode_controller_8hpp__incl.md5  _ghost_mode_controller_8hpp_source.html  _i_event_listener_8hpp.html  _i_event_listener_8hpp__dep__incl.map  _i_event_listener_8hpp__dep__incl.md5  _i_event_listener_8hpp__incl.map  _i_event_listener_8hpp__incl.md5  _i_event_listener_8hpp_source.html  _i_game_engine_8hpp.html  _i_game_engine_8hpp.js  _i_game_engine_8hpp__dep__incl.map  _i_game_engine_8hpp__dep__incl.md5  _i_game_engine_8hpp__incl.map  _i_game_engine_8hpp__incl.md5  _i_game_engine_8hpp_source.html  (+162 more)
Docs/latex/: _application_8hpp.tex  _application_8hpp__incl.md5  _application_8hpp_source.tex  _game_config_8hpp.tex  _game_config_8hpp__dep__incl.md5  _game_config_8hpp_source.tex  _game_screen_8hpp.tex  _game_screen_8hpp__incl.md5  _game_screen_8hpp_source.tex  _game_types_8hpp.tex  _game_types_8hpp__dep__incl.md5  _game_types_8hpp__incl.md5  _game_types_8hpp_source.tex  _ghost_mode_controller_8hpp.tex  _ghost_mode_controller_8hpp__incl.md5  _ghost_mode_controller_8hpp_source.tex  _i_event_listener_8hpp.tex  _i_event_listener_8hpp__dep__incl.md5  _i_event_listener_8hpp__incl.md5  _i_event_listener_8hpp_source.tex  _i_game_engine_8hpp.tex  _i_game_engine_8hpp__dep__incl.md5  _i_game_engine_8hpp__incl.md5  _i_game_engine_8hpp_source.tex  _i_ghost_8hpp.tex  _i_ghost_8hpp__incl.md5  _i_ghost_8hpp_source.tex  _i_menu_listener_8hpp.tex  _i_menu_listener_8hpp__dep__incl.md5  _i_menu_listener_8hpp_source.tex  _input_controller_8hpp.tex  _input_controller_8hpp__incl.md5  _map_8hpp.tex  (+48 more)
GUI/: CMakeLists.txt
GUI/Include/: Application.hpp  GameScreen.hpp  IMenuListener.hpp  InputController.hpp  MenuScreen.hpp  Renderer.hpp
GUI/Source/: Application.cpp  GameScreen.cpp  InputController.cpp  Main.cpp  MenuScreen.cpp
Logic/: CMakeLists.txt
Logic/Include/: Direction.hpp  GameConfig.hpp  GameEngine.hpp  GameState.hpp  GameTypes.hpp  Ghost.hpp  GhostMode.hpp  GhostModeController.hpp  GhostState.hpp  GhostType.hpp  IEventListener.hpp  IGameEngine.hpp  IGhost.hpp  Map.hpp  PlayerState.hpp
Logic/Include/GameTypes/: TileType.hpp  TileUpdate.hpp  Vector2.hpp
Logic/Include/GhostStrategies/: BlueStrategy.hpp  IGhostStrategy.hpp  OrangeStrategy.hpp  PinkStrategy.hpp  RedStrategy.hpp
Logic/Source/: GameEngine.cpp  Ghost.cpp  GhostModeController.cpp  Map.cpp  Vector2.cpp
Logic/Source/GhostStrategies/: BlueStrategy.cpp  OrangeStrategy.cpp  PinkStrategy.cpp  RedStrategy.cpp
Tests/: CMakeLists.txt
Tests/Source/: GameTypesTest.cpp
diagrams/: pacmanUC.vpp
gui/: CMakeLists.txt
gui/src/: App.cpp  App.hpp  main.cpp
html/: _application_8hpp_source.html  _blue_strategy_8hpp_source.html  _direction_8hpp_source.html  _g_u_i_2_source_2main_8cpp.html  _game_config_8hpp_source.html  _game_engine_8cpp.html  _game_engine_8hpp.html  _game_engine_8hpp.js  _game_engine_8hpp_source.html  _game_screen_8cpp.html  _game_screen_8hpp_source.html  _game_state_8hpp_source.html  _ghost_8cpp.html  _ghost_8hpp.html  _ghost_8hpp.js  _ghost_8hpp_source.html  _ghost_mode_8hpp_source.html  _ghost_mode_controller_8cpp.html  _ghost_mode_controller_8hpp_source.html  _ghost_state_8hpp_source.html  _ghost_type_8hpp_source.html  _i_event_listener_8hpp.html  _i_event_listener_8hpp.js  _i_event_listener_8hpp_source.html  _i_game_engine_8hpp.html  _i_game_engine_8hpp.js  _i_game_engine_8hpp_source.html  _i_ghost_8hpp.html  _i_ghost_8hpp.js  _i_ghost_8hpp_source.html  _i_ghost_strategy_8hpp.html  _i_ghost_strategy_8hpp.js  _i_ghost_strategy_8hpp_source.html  _i_menu_listener_8hpp.html  _i_menu_listener_8hpp.js  _i_menu_listener_8hpp_source.html  _input_controller_8hpp_source.html  _logic_2_include_2_game_types_2_vector2_8hpp_source.html  _main_8cpp.html  _map_8hpp_source.html  (+4344 more)
latex/: _application_8hpp_source.tex  _blue_strategy_8hpp_source.tex  _direction_8hpp_source.tex  _g_u_i_2_source_2main_8cpp.tex  _game_config_8hpp_source.tex  _game_engine_8cpp.tex  _game_engine_8hpp.tex  _game_engine_8hpp_source.tex  _game_screen_8cpp.tex  _game_screen_8hpp_source.tex  _game_state_8hpp_source.tex  _ghost_8cpp.tex  _ghost_8hpp.tex  _ghost_8hpp_source.tex  _ghost_mode_8hpp_source.tex  _ghost_mode_controller_8cpp.tex  _ghost_mode_controller_8hpp_source.tex  _ghost_state_8hpp_source.tex  _ghost_type_8hpp_source.tex  _i_event_listener_8hpp.tex  _i_event_listener_8hpp_source.tex  _i_game_engine_8hpp.tex  _i_game_engine_8hpp_source.tex  _i_ghost_8hpp.tex  _i_ghost_8hpp_source.tex  _i_ghost_strategy_8hpp.tex  _i_ghost_strategy_8hpp_source.tex  _i_menu_listener_8hpp.tex  _i_menu_listener_8hpp_source.tex  _input_controller_8hpp_source.tex  _logic_2_include_2_game_types_2_vector2_8hpp_source.tex  _main_8cpp.tex  _map_8hpp_source.tex  _menu_screen_8cpp.tex  _menu_screen_8hpp_source.tex  _orange_strategy_8hpp_source.tex  _pink_strategy_8hpp_source.tex  _player_state_8hpp_source.tex  _red_strategy_8hpp_source.tex  _tile_type_8hpp_source.tex  (+2647 more)
(+279 files in other folders)
