cmake_minimum_required(VERSION 3.16)
project(Cosmic LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(CosmicBusiness)
add_subdirectory(CosmicCore)
add_subdirectory(CosmicTests)

enable_testing()
